Refactored synchronous code, added coroutines

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     // (Java only)
     implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     // Non-existent testing packages
     testImplementation 'junit:junit:4.12'
