--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,18 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
+
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
+
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "moe.dreameh.assignment1"
-        minSdkVersion 15
+        applicationId "moe.dreameh.lunchlista"
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
-        versionName "0.4.2"
+        versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables.useSupportLibrary = true
-        javaCompileOptions.annotationProcessorOptions.includeCompileClasspath = true
-
-        kapt {
-            arguments {
-                arg("room.schemaLocation", "$projectDir/schemas".toString())
-            }
-        }
     }
     buildTypes {
         release {
@@ -27,57 +20,37 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '28.0.3'
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+
+    // Lifecycle
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.21"
-    implementation 'androidx.core:core-ktx:1.0.1'
+
+    // Fragments
     implementation 'androidx.fragment:fragment-ktx:1.0.0'
-    implementation 'androidx.preference:preference:1.1.0-alpha04'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha02'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0-alpha03'
+    // Preferences
+    implementation 'androidx.preference:preference:1.1.0-alpha05'
+    // RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    // CardView
+    implementation 'androidx.cardview:cardview:1.0.0'
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
-    // Room dependencies
-    def room_version = "2.1.0-alpha07"
 
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    // optional - Kotlin Extensions and Coroutines support for Room
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation 'androidx.vectordrawable:vectordrawable:1.1.0-alpha01'
-    // Retrofit and stuff
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    def work_version = "2.0.1"
-
-    // (Java only)
-    implementation "androidx.work:work-runtime-ktx:$work_version"
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-
-    // Non-existent testing packages
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha05'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha05'
-    testImplementation "androidx.room:room-testing:$room_version"
-    // Coroutines
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines"
-}
-repositories {
-    mavenCentral()
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
