--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,11 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    // FontAwesome Icons
+    implementation 'info.androidhive:fontawesome:0.0.5'
+    // HTMLSpanner
+    implementation 'com.github.NightWhistler:HtmlSpanner:0.4'
+
 
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
