Added AlarmManager, notifications for updates

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,8 +69,9 @@ dependencies {
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
-    // Worker
-    implementation "androidx.work:work-runtime-ktx:2.0.1"
+    // Alarm Manager
+    implementation 'com.github.zubairehman:AlarmManager:v1.2.0-alpha01'
+
 
 
 
