--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 def versionMajor = 0
 def versionMinor = 2
-def versionPatch = 2
-def versionBuild = 4 // bump for dogfood builds, public betas, etc.
+def versionPatch = 5
+def versionBuild = 0 // bump for dogfood builds, public betas, etc.
 
 android {
     compileSdkVersion 28
@@ -69,8 +69,8 @@ dependencies {
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
-    // Alarm Manager
-    implementation 'com.github.zubairehman:AlarmManager:v1.2.0-alpha01'
+    // Worker
+    implementation 'androidx.work:work-runtime-ktx:2.0.1'
 
 
 
